doc: Update swagger
